added remote ollama host

--- a/Prototype/AL.ipynb
+++ b/Prototype/AL.ipynb
@@ -97,11 +97,13 @@
     "        self, \n",
     "        interface: Literal[\"ollama\", \"claude\", \"chatgpt\"] = \"ollama\",\n",
     "        model: str = \"llama3.1\",\n",
-    "        api_key: Optional[str] = None\n",
+    "        api_key: Optional[str] = None,\n",
+    "        ollama_host: Optional[str] = None\n",
     "    ):\n",
     "        self.interface = interface\n",
     "        self.model = model\n",
     "        self.api_key = api_key\n",
+    "        self.ollama_host = ollama_host  # Store the Ollama host\n",
     "        self.history = []\n",
     "        self.last_code = []\n",
     "        self.active_code = 0\n",
@@ -112,6 +114,8 @@
     "    def _init_client(self):\n",
     "        if self.interface == \"ollama\":\n",
     "            import ollama\n",
+    "            if self.ollama_host:\n",
+    "                ollama.set_host(self.ollama_host)  # Set custom Ollama host if provided\n",
     "            self.client = ollama\n",
     "        elif self.interface == \"claude\":\n",
     "            from anthropic import Anthropic\n",
@@ -499,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
